# python_projects

./: :w
python_module00/ex1/: ft_plot_area.py
python_module00/ex2/: ft_harvest_total.py
python_module00/ex4/: ft_water_reminder.py
python_module00/ex5/: ft_count_harvest_iterative.py
python_module00/ex6/: ft_garden_summary.py
python_module00/ex7/: ft_seed_inventory.py
python_module01/ex0/: ft_garden_intro.py
python_module01/ex1/: ft_garden_data.py
python_module01/ex2/: ft_plant_growth.py
python_module01/ex3/: ft_plant_factory.py
python_module01/ex4/: ft_garden_security.py
python_module01/ex5/: ft_plant_types.py
python_module01/ex6/: ft_garden_analytics.py
python_module02/ex0/: ft_first_exception.py
python_module02/ex1/: ft_different_errors.py
python_module02/ex2/: ft_custom_errors.py
python_module02/ex3/: ft_finally_block.py
python_module02/ex4/: ft_raise_errors.py
python_module02/ex5/: ft_garden_management.py
python_module03/ex0/: ft_command_quest.py
python_module03/ex1/: ft_score_analytics.py
python_module03/ex2/: ft_coordinate_system.py
python_module03/ex3/: ft_achievement_tracker.py
python_module03/ex4/: \  ft_inventory_system.py
python_module03/ex5/: ft_data_stream.py
python_module03/ex6/: ft_analytics_dashboard.py
python_module04/: sample_data.json
python_module04/ex0/: ft_ancient_text.py
python_module04/ex1/: ft_archive_creation.py
python_module06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
python_module08/ex1/: loading.py  pyproject.toml
(+43 files in other folders)
